--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ analytics:
 author:
   name             : "Marc Girones Dezsenyi"
   avatar           : "profile.jpg"
-  bio              : "Hi, I am Marc Girones and I work as a Game Programmer at Cirsa in Barcelona, Spain. I started my career with a game for PC and Mobiles. At this moment I developing gaems for casinos and bars "
+  bio              : "Hi, I am Marc Girones and I work as a Game Programmer at Cirsa in Barcelona, Spain. I started my career with a game for PC and Mobiles. At this moment I developing games for casinos and bars "
   location         : "Barcelona, Spain"
   employer         : 
   googlescholar    : 
@@ -91,19 +91,19 @@ author:
   flickr           :
   facebook         : 
   foursquare       :
-  github           : "https://github.com/giron3s"
+  github           : "giron3s"
   google_plus      :
   keybase          :
   instagram        : 
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/marc-girones-dezs%C3%A8nyi-a424a34a/"
+  linkedin         : "marc-girones-dezs%C3%A8nyi-a424a34a/"
   orcid            :
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/giron3s"
+  twitter          : "giron3s"
   vine             :
   weibo            :
   xing             :
