--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,7 @@ analytics:
 author:
   name             : "Marc Girones Dezsenyi"
   avatar           : "profile.jpg"
-  bio              : "Hi, I am Marc Girones and I work as a Game Programmer at Cirsa in Barcelona, Spain. Software developer with 10 years of experience in the game industry. Worked in games for _App Store_,
-_Google Play_ and other platforms."
+  bio              : "Hi, I am Marc Girones and I work as a Game Programmer at Cirsa in Barcelona, Spain. Software developer with 10 years of experience in the game industry."
   location         : "Barcelona, Spain"
   employer         : 
   googlescholar    : 
