--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,11 @@ main:
   #- title: "Talks"
   #  url: /talks/    
         
+  #- title: "Blog Posts"
+  #    url: /year-archive/
   - title: "Blog Posts"
-    url: /year-archive/
+    url: /files/paper1.pdf
+
     
   - title: "Skills"
     url: /skills/   
