--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,42 @@
 # main links links
+#main:
+#  - title: "Publications"
+#    url: /publications/
+#
+#  #- title: "Talks"
+#  #  url: /talks/    
+#        
+#  - title: "Blog Posts"
+#    url: /year-archive/
+#    
+#  - title: "Skills"
+#    url: /skills/   
+#    
+#    
+#  - title: "CV"
+#    url: /cv/
+
+
+
+# main links links
 main:
   - title: "Publications"
     url: /publications/
 
-  #- title: "Talks"
-  #  url: /talks/    
-        
-  #- title: "Blog Posts"
-  #    url: /year-archive/
-  - title: "Blog Posts"
-    url: /files/paper1.pdf
+  - title: "Professional Work"
+    url: /professional-work/
 
-    
+  - title: "Personal Work"
+    url: /personal-work/
+
+   
   - title: "Skills"
     url: /skills/   
     
-    
+
   - title: "CV"
-    url: /cv/
+    url: /files/paper1.pdf
+
+    
+
     
