--- a/_config.yml
+++ b/_config.yml
@@ -77,9 +77,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Marc Girones Dezsenyi"
+  name             : "Marc Girones"
   avatar           : "profile.jpg"
-  bio              : "Hi, I am Marc Girones and I work as a senior game programmer at Winsystem in Barcelona, Spain. Software developer with 10 years of experience in the game industry."
+  bio              : "Lead at WinSystems. Passion for game development.\nBefore: CIRSA, Digital Legends, BDigital."
   location         : "Barcelona, Spain"
   employer         : 
   googlescholar    : 
